Bug 1546374 - Do not adjust position of popup windows on Wayland; r=stransky

Because adjusting position in the Wayland does not work
(because of unknown absolute position of the window), do not try
to adjust popup position under Wayland.

Differential Revision: https://phabricator.services.mozilla.com/D28480